--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 1.19.0 / 2019-03-21
+
+* Adding Linear Regression REST methods and Local object.
+
 === 1.18.6 / 2019-03-19
 
 * Fixing bug in local deepnet regression predictions.
